src/parser/parser.output
Grammar

    0 $accept: module $end

    1 module: module_list

    2 module_item: import_definition
    3            | class_definition

    4 module_list: module_item
    5            | module module_item

    6 complex_name: SYMBOL
    7             | complex_name '.' SYMBOL

    8 intrinsic_type: DICT
    9               | ARRAY
   10               | BOOL
   11               | STRING
   12               | FLOAT
   13               | INT
   14               | INT8
   15               | INT16
   16               | INT32
   17               | INT64
   18               | UINT
   19               | UINT8
   20               | UINT16
   21               | UINT32
   22               | UINT64
   23               | complex_name

   24 data_attrs: PRIVATE
   25           | PUBLIC
   26           | PROTECTED
   27           | CONST
   28           | STATIC

   29 data_attrs_list: data_attrs
   30                | data_attrs_list data_attrs

   31 number: UNUM
   32       | INUM
   33       | FNUM

   34 formatted_string_param: QSTRG
   35                       | expression

   36 formatted_string_param_list: formatted_string_param
   37                            | formatted_string_param_list ',' formatted_string_param

   38 formatted_string: QSTRG

   39 $@1: %empty

   40 $@2: %empty

   41 $@3: %empty

   42 formatted_string: QSTRG $@1 '%' '(' $@2 formatted_string_param_list $@3 ')'

   43 bool_value: TRUE
   44           | FALSE

   45 $@4: %empty

   46 import_definition: IMPORT SYMBOL $@4 ';'

   47 $@5: %empty

   48 $@6: %empty

   49 import_definition: IMPORT SYMBOL $@5 AS SYMBOL $@6 ';'

   50 class_parm: PRIVATE complex_name
   51           | PUBLIC complex_name
   52           | PROTECTED complex_name
   53           | complex_name

   54 class_parm_list: class_parm
   55                | class_parm_list ',' class_parm
   56                | %empty

   57 class_body_item: class_data_definition
   58                | method_definition
   59                | constructor_definition
   60                | destructor_definition

   61 class_body: class_body_item
   62           | class_body class_body_item

   63 $@7: %empty

   64 $@8: %empty

   65 $@9: %empty

   66 $@10: %empty

   67 $@11: %empty

   68 $@12: %empty

   69 $@13: %empty

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

   71 $@14: %empty

   72 $@15: %empty

   73 $@16: %empty

   74 $@17: %empty

   75 $@18: %empty

   76 $@19: %empty

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

   78 $@20: %empty

   79 $@21: %empty

   80 $@22: %empty

   81 class_data_definition: intrinsic_type $@20 data_attrs_list $@21 SYMBOL $@22 ';'

   82 $@23: %empty

   83 $@24: %empty

   84 class_data_definition: intrinsic_type $@23 SYMBOL $@24 ';'

   85 function_data_definition_target: NOTHING
   86                                | expression

   87 $@25: %empty

   88 function_data_definition_target: type_cast $@25 expression
   89                                | formatted_string

   90 function_data_definition_symbol: SYMBOL
   91                                | CONST SYMBOL

   92 function_data_definition: intrinsic_type function_data_definition_symbol ';'

   93 $@26: %empty

   94 function_data_definition: intrinsic_type function_data_definition_symbol '=' $@26 function_data_definition_target ';'

   95 $@27: %empty

   96 method_def_param: intrinsic_type $@27 SYMBOL

   97 method_def_param_list: method_def_param
   98                      | method_def_param_list ',' method_def_param

   99 method_param_def: method_def_param_list
  100                 | %empty

  101 $@28: %empty

  102 $@29: %empty

  103 $@30: %empty

  104 $@31: %empty

  105 $@32: %empty

  106 $@33: %empty

  107 $@34: %empty

  108 $@35: %empty

  109 method_definition: METHOD $@28 data_attrs_list $@29 SYMBOL $@30 '(' $@31 method_param_def $@32 ')' '(' $@33 method_param_def $@34 ')' $@35 method_body

  110 $@36: %empty

  111 $@37: %empty

  112 $@38: %empty

  113 $@39: %empty

  114 $@40: %empty

  115 $@41: %empty

  116 $@42: %empty

  117 method_definition: METHOD $@36 SYMBOL $@37 '(' $@38 method_param_def $@39 ')' '(' $@40 method_param_def $@41 ')' $@42 method_body

  118 method_body_element: function_data_definition
  119                    | try_clause
  120                    | raise_clause
  121                    | function_call
  122                    | for_clause
  123                    | if_clause
  124                    | while_clause
  125                    | do_clause
  126                    | switch_clause
  127                    | pre_post_inc ';'
  128                    | assignment ';'

  129 method_body_element_list: method_body_element
  130                         | method_body_element_list method_body_element

  131 $@43: %empty

  132 $@44: %empty

  133 method_body: '{' $@43 method_body_element_list $@44 '}'
  134            | '{' '}'

  135 $@45: %empty

  136 $@46: %empty

  137 $@47: %empty

  138 $@48: %empty

  139 constructor_definition: CREATE $@45 '(' $@46 method_param_def $@47 ')' $@48 method_body

  140 $@49: %empty

  141 destructor_definition: DESTROY $@49 method_body

  142 $@50: %empty

  143 $@51: %empty

  144 subscript_item: '[' $@50 expression $@51 ']'

  145 $@52: %empty

  146 $@53: %empty

  147 subscript_item: '[' $@52 formatted_string $@53 ']'

  148 subscript_list: subscript_item
  149               | subscript_list subscript_item

  150 expression_name: complex_name

  151 $@54: %empty

  152 expression_name: complex_name $@54 subscript_list

  153 expression: number
  154           | expression_name
  155           | expression '+' expression
  156           | expression '-' expression
  157           | expression '/' expression
  158           | expression '*' expression
  159           | expression '%' expression
  160           | expression AND expression
  161           | expression OR expression
  162           | expression '<' expression
  163           | expression '>' expression
  164           | expression EQU expression
  165           | expression NEQU expression
  166           | expression LTEQU expression
  167           | expression GTEQU expression
  168           | expression '&' expression
  169           | expression '|' expression
  170           | expression '^' expression
  171           | expression BROL expression
  172           | expression BROR expression
  173           | expression BSHL expression
  174           | expression BSHR expression
  175           | '-' expression
  176           | NOT expression
  177           | '~' expression

  178 $@55: %empty

  179 expression: '(' $@55 expression ')'

  180 function_call_parameter: formatted_string
  181                        | expression

  182 function_call_parameter_list: %empty
  183                             | function_call_parameter
  184                             | function_call_parameter_list ',' function_call_parameter

  185 $@56: %empty

  186 $@57: %empty

  187 $@58: %empty

  188 $@59: %empty

  189 $@60: %empty

  190 function_call: complex_name $@56 '(' $@57 function_call_parameter_list $@58 ')' '(' $@59 function_call_parameter_list $@60 ')' ';'

  191 $@61: %empty

  192 function_call: DESTROY complex_name $@61 ';'

  193 branch_expression: expression
  194                  | bool_value

  195 jump_clause: CONTINUE ';'
  196            | BREAK ';'

  197 $@62: %empty

  198 pre_post_inc: complex_name $@62 INC

  199 $@63: %empty

  200 pre_post_inc: complex_name $@63 DEC

  201 $@64: %empty

  202 pre_post_inc: INC $@64 complex_name

  203 $@65: %empty

  204 pre_post_inc: DEC $@65 complex_name

  205 loop_body_element: method_body_element
  206                  | jump_clause

  207 loop_body_element_list: loop_body_element
  208                       | loop_body_element_list loop_body_element

  209 loop_body: '{' '}'

  210 $@66: %empty

  211 $@67: %empty

  212 loop_body: '{' $@66 loop_body_element_list $@67 '}'

  213 for_initialize_assign: NOTHING
  214                      | expression
  215                      | bool_value

  216 $@68: %empty

  217 $@69: %empty

  218 for_initialize: intrinsic_type $@68 SYMBOL $@69 '=' for_initialize_assign ';'

  219 $@70: %empty

  220 for_initialize: assignment $@70 ';'

  221 $@71: %empty

  222 for_test_expression: expression $@71 ';'

  223 for_arith_expression: expression
  224                     | pre_post_inc
  225                     | assignment

  226 $@72: %empty

  227 $@73: %empty

  228 for_clause: FOR '(' $@72 for_initialize for_test_expression for_arith_expression $@73 ')' loop_body

  229 $@74: %empty

  230 $@75: %empty

  231 else_clause: ELSE '(' $@74 expression $@75 ')' method_body

  232 $@76: %empty

  233 else_clause: ELSE $@76 method_body

  234 else_body: else_clause
  235          | else_body else_clause
  236          | method_body

  237 $@77: %empty

  238 $@78: %empty

  239 if_clause: IF '(' $@77 branch_expression $@78 ')' else_body

  240 $@79: %empty

  241 $@80: %empty

  242 while_clause: WHILE '(' $@79 branch_expression $@80 ')' loop_body

  243 $@81: %empty

  244 $@82: %empty

  245 $@83: %empty

  246 $@84: %empty

  247 do_clause: DO $@81 loop_body $@82 WHILE '(' $@83 branch_expression $@84 ')' ';'

  248 except_parameter: %empty
  249                 | formatted_string
  250                 | complex_name

  251 except_parameter_list: except_parameter
  252                      | except_parameter_list ',' except_parameter

  253 $@85: %empty

  254 $@86: %empty

  255 except_clause: EXCEPT '(' $@85 except_parameter_list $@86 ')' method_body

  256 $@87: %empty

  257 $@88: %empty

  258 $@89: %empty

  259 except_clause: EXCEPT complex_name $@87 '(' $@88 except_parameter_list $@89 ')' method_body

  260 $@90: %empty

  261 final_clause: FINAL $@90 method_body

  262 $@91: %empty

  263 try_clause_intro: TRY $@91 method_body except_clause

  264 try_clause: try_clause_intro
  265           | try_clause_intro final_clause

  266 $@92: %empty

  267 $@93: %empty

  268 raise_clause: RAISE '(' $@92 except_parameter_list $@93 ')' ';'

  269 $@94: %empty

  270 case_clause: CASE UNUM $@94 loop_body

  271 $@95: %empty

  272 case_clause: CASE INUM $@95 loop_body

  273 $@96: %empty

  274 case_clause: CASE FNUM $@96 loop_body

  275 $@97: %empty

  276 default_case: DEFAULT $@97 loop_body

  277 case_body: case_clause
  278          | case_body case_clause

  279 $@98: %empty

  280 $@99: %empty

  281 $@100: %empty

  282 switch_clause_intro: SWITCH '(' $@98 expression $@99 ')' '{' $@100 case_body

  283 switch_clause: switch_clause_intro '}'

  284 $@101: %empty

  285 switch_clause: switch_clause_intro default_case $@101 '}'

  286 $@102: %empty

  287 type_cast: intrinsic_type $@102 ':'

  288 assignment_target: expression
  289                  | formatted_string
  290                  | type_cast expression
  291                  | NOTHING
  292                  | bool_value

  293 $@103: %empty

  294 assignment: complex_name $@103 '=' assignment_target


Terminals, with rules where they appear

$end (0) 0
'%' (37) 42 159
'&' (38) 168
'(' (40) 42 70 77 109 117 139 179 190 228 231 239 242 247 255 259 268
    282
')' (41) 42 70 77 109 117 139 179 190 228 231 239 242 247 255 259 268
    282
'*' (42) 158
'+' (43) 155
',' (44) 37 55 98 184 252
'-' (45) 156 175
'.' (46) 7
'/' (47) 157
':' (58) 287
';' (59) 46 49 81 84 92 94 127 128 190 192 195 196 218 220 222 247
    268
'<' (60) 162
'=' (61) 94 218 294
'>' (62) 163
'[' (91) 144 147
']' (93) 144 147
'^' (94) 170
'{' (123) 70 77 133 134 209 212 282
'|' (124) 169
'}' (125) 70 77 133 134 209 212 283 285
'~' (126) 177
error (256)
SYMBOL (258) 6 7 46 49 70 77 81 84 90 91 96 109 117 218
UNUM (259) 31 270
FNUM (260) 33 274
INUM (261) 32 272
QSTRG (262) 34 38 42
CLASS (263) 70 77
METHOD (264) 109 117
CREATE (265) 139
DESTROY (266) 141 192
NOTHING (267) 85 213 291
IMPORT (268) 46 49
PUBLIC (269) 25 51
PRIVATE (270) 24 50
PROTECTED (271) 26 52
STATIC (272) 28
CONST (273) 27 91
DICT (274) 8
ARRAY (275) 9
BOOL (276) 10
AS (277) 49
STRING (278) 11
FLOAT (279) 12
INT (280) 13
INT8 (281) 14
INT16 (282) 15
INT32 (283) 16
INT64 (284) 17
UINT (285) 18
UINT8 (286) 19
UINT16 (287) 20
UINT32 (288) 21
UINT64 (289) 22
IF (290) 239
TRUE (291) 43
ELSE (292) 231 233
WHILE (293) 242 247
DO (294) 247
TRY (295) 263
EXCEPT (296) 255 259
RAISE (297) 268
FOR (298) 228
FALSE (299) 44
SWITCH (300) 282
CASE (301) 270 272 274
BREAK (302) 196
CONTINUE (303) 195
AND (304) 160
OR (305) 161
DEFAULT (306) 276
NOT (307) 176
EQU (308) 164
NEQU (309) 165
LTEQU (310) 166
GTEQU (311) 167
BSHL (312) 173
BSHR (313) 174
BROL (314) 171
BROR (315) 172
INC (316) 198 202
DEC (317) 200 204
FINAL (318) 261
NEG (319)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
module (88)
    on left: 1, on right: 0 5
module_item (89)
    on left: 2 3, on right: 4 5
module_list (90)
    on left: 4 5, on right: 1
complex_name (91)
    on left: 6 7, on right: 7 23 50 51 52 53 150 152 190 192 198 200
    202 204 250 259 294
intrinsic_type (92)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23, on right:
    81 84 92 94 96 218 287
data_attrs (93)
    on left: 24 25 26 27 28, on right: 29 30
data_attrs_list (94)
    on left: 29 30, on right: 30 70 81 109
number (95)
    on left: 31 32 33, on right: 153
formatted_string_param (96)
    on left: 34 35, on right: 36 37
formatted_string_param_list (97)
    on left: 36 37, on right: 37 42
formatted_string (98)
    on left: 38 42, on right: 89 147 180 249 289
$@1 (99)
    on left: 39, on right: 42
$@2 (100)
    on left: 40, on right: 42
$@3 (101)
    on left: 41, on right: 42
bool_value (102)
    on left: 43 44, on right: 194 215 292
import_definition (103)
    on left: 46 49, on right: 2
$@4 (104)
    on left: 45, on right: 46
$@5 (105)
    on left: 47, on right: 49
$@6 (106)
    on left: 48, on right: 49
class_parm (107)
    on left: 50 51 52 53, on right: 54 55
class_parm_list (108)
    on left: 54 55 56, on right: 55 70 77
class_body_item (109)
    on left: 57 58 59 60, on right: 61 62
class_body (110)
    on left: 61 62, on right: 62 70 77
class_definition (111)
    on left: 70 77, on right: 3
$@7 (112)
    on left: 63, on right: 70
$@8 (113)
    on left: 64, on right: 70
$@9 (114)
    on left: 65, on right: 70
$@10 (115)
    on left: 66, on right: 70
$@11 (116)
    on left: 67, on right: 70
$@12 (117)
    on left: 68, on right: 70
$@13 (118)
    on left: 69, on right: 70
$@14 (119)
    on left: 71, on right: 77
$@15 (120)
    on left: 72, on right: 77
$@16 (121)
    on left: 73, on right: 77
$@17 (122)
    on left: 74, on right: 77
$@18 (123)
    on left: 75, on right: 77
$@19 (124)
    on left: 76, on right: 77
class_data_definition (125)
    on left: 81 84, on right: 57
$@20 (126)
    on left: 78, on right: 81
$@21 (127)
    on left: 79, on right: 81
$@22 (128)
    on left: 80, on right: 81
$@23 (129)
    on left: 82, on right: 84
$@24 (130)
    on left: 83, on right: 84
function_data_definition_target (131)
    on left: 85 86 88 89, on right: 94
$@25 (132)
    on left: 87, on right: 88
function_data_definition_symbol (133)
    on left: 90 91, on right: 92 94
function_data_definition (134)
    on left: 92 94, on right: 118
$@26 (135)
    on left: 93, on right: 94
method_def_param (136)
    on left: 96, on right: 97 98
$@27 (137)
    on left: 95, on right: 96
method_def_param_list (138)
    on left: 97 98, on right: 98 99
method_param_def (139)
    on left: 99 100, on right: 109 117 139
method_definition (140)
    on left: 109 117, on right: 58
$@28 (141)
    on left: 101, on right: 109
$@29 (142)
    on left: 102, on right: 109
$@30 (143)
    on left: 103, on right: 109
$@31 (144)
    on left: 104, on right: 109
$@32 (145)
    on left: 105, on right: 109
$@33 (146)
    on left: 106, on right: 109
$@34 (147)
    on left: 107, on right: 109
$@35 (148)
    on left: 108, on right: 109
$@36 (149)
    on left: 110, on right: 117
$@37 (150)
    on left: 111, on right: 117
$@38 (151)
    on left: 112, on right: 117
$@39 (152)
    on left: 113, on right: 117
$@40 (153)
    on left: 114, on right: 117
$@41 (154)
    on left: 115, on right: 117
$@42 (155)
    on left: 116, on right: 117
method_body_element (156)
    on left: 118 119 120 121 122 123 124 125 126 127 128, on right:
    129 130 205
method_body_element_list (157)
    on left: 129 130, on right: 130 133
method_body (158)
    on left: 133 134, on right: 109 117 139 141 231 233 236 255 259
    261 263
$@43 (159)
    on left: 131, on right: 133
$@44 (160)
    on left: 132, on right: 133
constructor_definition (161)
    on left: 139, on right: 59
$@45 (162)
    on left: 135, on right: 139
$@46 (163)
    on left: 136, on right: 139
$@47 (164)
    on left: 137, on right: 139
$@48 (165)
    on left: 138, on right: 139
destructor_definition (166)
    on left: 141, on right: 60
$@49 (167)
    on left: 140, on right: 141
subscript_item (168)
    on left: 144 147, on right: 148 149
$@50 (169)
    on left: 142, on right: 144
$@51 (170)
    on left: 143, on right: 144
$@52 (171)
    on left: 145, on right: 147
$@53 (172)
    on left: 146, on right: 147
subscript_list (173)
    on left: 148 149, on right: 149 152
expression_name (174)
    on left: 150 152, on right: 154
$@54 (175)
    on left: 151, on right: 152
expression (176)
    on left: 153 154 155 156 157 158 159 160 161 162 163 164 165 166
    167 168 169 170 171 172 173 174 175 176 177 179, on right: 35 86
    88 144 155 156 157 158 159 160 161 162 163 164 165 166 167 168
    169 170 171 172 173 174 175 176 177 179 181 193 214 222 223 231
    282 288 290
$@55 (177)
    on left: 178, on right: 179
function_call_parameter (178)
    on left: 180 181, on right: 183 184
function_call_parameter_list (179)
    on left: 182 183 184, on right: 184 190
function_call (180)
    on left: 190 192, on right: 121
$@56 (181)
    on left: 185, on right: 190
$@57 (182)
    on left: 186, on right: 190
$@58 (183)
    on left: 187, on right: 190
$@59 (184)
    on left: 188, on right: 190
$@60 (185)
    on left: 189, on right: 190
$@61 (186)
    on left: 191, on right: 192
branch_expression (187)
    on left: 193 194, on right: 239 242 247
jump_clause (188)
    on left: 195 196, on right: 206
pre_post_inc (189)
    on left: 198 200 202 204, on right: 127 224
$@62 (190)
    on left: 197, on right: 198
$@63 (191)
    on left: 199, on right: 200
$@64 (192)
    on left: 201, on right: 202
$@65 (193)
    on left: 203, on right: 204
loop_body_element (194)
    on left: 205 206, on right: 207 208
loop_body_element_list (195)
    on left: 207 208, on right: 208 212
loop_body (196)
    on left: 209 212, on right: 228 242 247 270 272 274 276
$@66 (197)
    on left: 210, on right: 212
$@67 (198)
    on left: 211, on right: 212
for_initialize_assign (199)
    on left: 213 214 215, on right: 218
for_initialize (200)
    on left: 218 220, on right: 228
$@68 (201)
    on left: 216, on right: 218
$@69 (202)
    on left: 217, on right: 218
$@70 (203)
    on left: 219, on right: 220
for_test_expression (204)
    on left: 222, on right: 228
$@71 (205)
    on left: 221, on right: 222
for_arith_expression (206)
    on left: 223 224 225, on right: 228
for_clause (207)
    on left: 228, on right: 122
$@72 (208)
    on left: 226, on right: 228
$@73 (209)
    on left: 227, on right: 228
else_clause (210)
    on left: 231 233, on right: 234 235
$@74 (211)
    on left: 229, on right: 231
$@75 (212)
    on left: 230, on right: 231
$@76 (213)
    on left: 232, on right: 233
else_body (214)
    on left: 234 235 236, on right: 235 239
if_clause (215)
    on left: 239, on right: 123
$@77 (216)
    on left: 237, on right: 239
$@78 (217)
    on left: 238, on right: 239
while_clause (218)
    on left: 242, on right: 124
$@79 (219)
    on left: 240, on right: 242
$@80 (220)
    on left: 241, on right: 242
do_clause (221)
    on left: 247, on right: 125
$@81 (222)
    on left: 243, on right: 247
$@82 (223)
    on left: 244, on right: 247
$@83 (224)
    on left: 245, on right: 247
$@84 (225)
    on left: 246, on right: 247
except_parameter (226)
    on left: 248 249 250, on right: 251 252
except_parameter_list (227)
    on left: 251 252, on right: 252 255 259 268
except_clause (228)
    on left: 255 259, on right: 263
$@85 (229)
    on left: 253, on right: 255
$@86 (230)
    on left: 254, on right: 255
$@87 (231)
    on left: 256, on right: 259
$@88 (232)
    on left: 257, on right: 259
$@89 (233)
    on left: 258, on right: 259
final_clause (234)
    on left: 261, on right: 265
$@90 (235)
    on left: 260, on right: 261
try_clause_intro (236)
    on left: 263, on right: 264 265
$@91 (237)
    on left: 262, on right: 263
try_clause (238)
    on left: 264 265, on right: 119
raise_clause (239)
    on left: 268, on right: 120
$@92 (240)
    on left: 266, on right: 268
$@93 (241)
    on left: 267, on right: 268
case_clause (242)
    on left: 270 272 274, on right: 277 278
$@94 (243)
    on left: 269, on right: 270
$@95 (244)
    on left: 271, on right: 272
$@96 (245)
    on left: 273, on right: 274
default_case (246)
    on left: 276, on right: 285
$@97 (247)
    on left: 275, on right: 276
case_body (248)
    on left: 277 278, on right: 278 282
switch_clause_intro (249)
    on left: 282, on right: 283 285
$@98 (250)
    on left: 279, on right: 282
$@99 (251)
    on left: 280, on right: 282
$@100 (252)
    on left: 281, on right: 282
switch_clause (253)
    on left: 283 285, on right: 126
$@101 (254)
    on left: 284, on right: 285
type_cast (255)
    on left: 287, on right: 88 290
$@102 (256)
    on left: 286, on right: 287
assignment_target (257)
    on left: 288 289 290 291 292, on right: 294
assignment (258)
    on left: 294, on right: 128 220 225
$@103 (259)
    on left: 293, on right: 294


State 0

    0 $accept: . module $end

    CLASS   shift, and go to state 1
    IMPORT  shift, and go to state 2

    module             go to state 3
    module_item        go to state 4
    module_list        go to state 5
    import_definition  go to state 6
    class_definition   go to state 7


State 1

   70 class_definition: CLASS . $@7 data_attrs_list $@8 SYMBOL $@9 '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'
   77                 | CLASS . $@14 SYMBOL $@15 '(' $@16 class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

    SYMBOL    reduce using rule 71 ($@14)
    $default  reduce using rule 63 ($@7)

    $@7   go to state 8
    $@14  go to state 9


State 2

   46 import_definition: IMPORT . SYMBOL $@4 ';'
   49                  | IMPORT . SYMBOL $@5 AS SYMBOL $@6 ';'

    SYMBOL  shift, and go to state 10


State 3

    0 $accept: module . $end
    5 module_list: module . module_item

    $end    shift, and go to state 11
    CLASS   shift, and go to state 1
    IMPORT  shift, and go to state 2

    module_item        go to state 12
    import_definition  go to state 6
    class_definition   go to state 7


State 4

    4 module_list: module_item .

    $default  reduce using rule 4 (module_list)


State 5

    1 module: module_list .

    $default  reduce using rule 1 (module)


State 6

    2 module_item: import_definition .

    $default  reduce using rule 2 (module_item)


State 7

    3 module_item: class_definition .

    $default  reduce using rule 3 (module_item)


State 8

   70 class_definition: CLASS $@7 . data_attrs_list $@8 SYMBOL $@9 '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    PUBLIC     shift, and go to state 13
    PRIVATE    shift, and go to state 14
    PROTECTED  shift, and go to state 15
    STATIC     shift, and go to state 16
    CONST      shift, and go to state 17

    data_attrs       go to state 18
    data_attrs_list  go to state 19


State 9

   77 class_definition: CLASS $@14 . SYMBOL $@15 '(' $@16 class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

    SYMBOL  shift, and go to state 20


State 10

   46 import_definition: IMPORT SYMBOL . $@4 ';'
   49                  | IMPORT SYMBOL . $@5 AS SYMBOL $@6 ';'

    AS        reduce using rule 47 ($@5)
    $default  reduce using rule 45 ($@4)

    $@4  go to state 21
    $@5  go to state 22


State 11

    0 $accept: module $end .

    $default  accept


State 12

    5 module_list: module module_item .

    $default  reduce using rule 5 (module_list)


State 13

   25 data_attrs: PUBLIC .

    $default  reduce using rule 25 (data_attrs)


State 14

   24 data_attrs: PRIVATE .

    $default  reduce using rule 24 (data_attrs)


State 15

   26 data_attrs: PROTECTED .

    $default  reduce using rule 26 (data_attrs)


State 16

   28 data_attrs: STATIC .

    $default  reduce using rule 28 (data_attrs)


State 17

   27 data_attrs: CONST .

    $default  reduce using rule 27 (data_attrs)


State 18

   29 data_attrs_list: data_attrs .

    $default  reduce using rule 29 (data_attrs_list)


State 19

   30 data_attrs_list: data_attrs_list . data_attrs
   70 class_definition: CLASS $@7 data_attrs_list . $@8 SYMBOL $@9 '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    PUBLIC     shift, and go to state 13
    PRIVATE    shift, and go to state 14
    PROTECTED  shift, and go to state 15
    STATIC     shift, and go to state 16
    CONST      shift, and go to state 17

    $default  reduce using rule 64 ($@8)

    data_attrs  go to state 23
    $@8         go to state 24


State 20

   77 class_definition: CLASS $@14 SYMBOL . $@15 '(' $@16 class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

    $default  reduce using rule 72 ($@15)

    $@15  go to state 25


State 21

   46 import_definition: IMPORT SYMBOL $@4 . ';'

    ';'  shift, and go to state 26


State 22

   49 import_definition: IMPORT SYMBOL $@5 . AS SYMBOL $@6 ';'

    AS  shift, and go to state 27


State 23

   30 data_attrs_list: data_attrs_list data_attrs .

    $default  reduce using rule 30 (data_attrs_list)


State 24

   70 class_definition: CLASS $@7 data_attrs_list $@8 . SYMBOL $@9 '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    SYMBOL  shift, and go to state 28


State 25

   77 class_definition: CLASS $@14 SYMBOL $@15 . '(' $@16 class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

    '('  shift, and go to state 29


State 26

   46 import_definition: IMPORT SYMBOL $@4 ';' .

    $default  reduce using rule 46 (import_definition)


State 27

   49 import_definition: IMPORT SYMBOL $@5 AS . SYMBOL $@6 ';'

    SYMBOL  shift, and go to state 30


State 28

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL . $@9 '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    $default  reduce using rule 65 ($@9)

    $@9  go to state 31


State 29

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' . $@16 class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

    $default  reduce using rule 73 ($@16)

    $@16  go to state 32


State 30

   49 import_definition: IMPORT SYMBOL $@5 AS SYMBOL . $@6 ';'

    $default  reduce using rule 48 ($@6)

    $@6  go to state 33


State 31

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 . '(' $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    '('  shift, and go to state 34


State 32

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 . class_parm_list $@17 ')' '{' $@18 class_body $@19 '}'

    SYMBOL     shift, and go to state 35
    PUBLIC     shift, and go to state 36
    PRIVATE    shift, and go to state 37
    PROTECTED  shift, and go to state 38

    $default  reduce using rule 56 (class_parm_list)

    complex_name     go to state 39
    class_parm       go to state 40
    class_parm_list  go to state 41


State 33

   49 import_definition: IMPORT SYMBOL $@5 AS SYMBOL $@6 . ';'

    ';'  shift, and go to state 42


State 34

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 '(' . $@10 class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    $default  reduce using rule 66 ($@10)

    $@10  go to state 43


State 35

    6 complex_name: SYMBOL .

    $default  reduce using rule 6 (complex_name)


State 36

   51 class_parm: PUBLIC . complex_name

    SYMBOL  shift, and go to state 35

    complex_name  go to state 44


State 37

   50 class_parm: PRIVATE . complex_name

    SYMBOL  shift, and go to state 35

    complex_name  go to state 45


State 38

   52 class_parm: PROTECTED . complex_name

    SYMBOL  shift, and go to state 35

    complex_name  go to state 46


State 39

    7 complex_name: complex_name . '.' SYMBOL
   53 class_parm: complex_name .  [',', ')']

    '.'  shift, and go to state 47

    $default  reduce using rule 53 (class_parm)


State 40

   54 class_parm_list: class_parm .

    $default  reduce using rule 54 (class_parm_list)


State 41

   55 class_parm_list: class_parm_list . ',' class_parm
   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 class_parm_list . $@17 ')' '{' $@18 class_body $@19 '}'

    ','  shift, and go to state 48

    $default  reduce using rule 74 ($@17)

    $@17  go to state 49


State 42

   49 import_definition: IMPORT SYMBOL $@5 AS SYMBOL $@6 ';' .

    $default  reduce using rule 49 (import_definition)


State 43

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 '(' $@10 . class_parm_list $@11 ')' '{' $@12 class_body $@13 '}'

    SYMBOL     shift, and go to state 35
    PUBLIC     shift, and go to state 36
    PRIVATE    shift, and go to state 37
    PROTECTED  shift, and go to state 38

    $default  reduce using rule 56 (class_parm_list)

    complex_name     go to state 39
    class_parm       go to state 40
    class_parm_list  go to state 50


State 44

    7 complex_name: complex_name . '.' SYMBOL
   51 class_parm: PUBLIC complex_name .  [',', ')']

    '.'  shift, and go to state 47

    $default  reduce using rule 51 (class_parm)


State 45

    7 complex_name: complex_name . '.' SYMBOL
   50 class_parm: PRIVATE complex_name .  [',', ')']

    '.'  shift, and go to state 47

    $default  reduce using rule 50 (class_parm)


State 46

    7 complex_name: complex_name . '.' SYMBOL
   52 class_parm: PROTECTED complex_name .  [',', ')']

    '.'  shift, and go to state 47

    $default  reduce using rule 52 (class_parm)


State 47

    7 complex_name: complex_name '.' . SYMBOL

    SYMBOL  shift, and go to state 51


State 48

   55 class_parm_list: class_parm_list ',' . class_parm

    SYMBOL     shift, and go to state 35
    PUBLIC     shift, and go to state 36
    PRIVATE    shift, and go to state 37
    PROTECTED  shift, and go to state 38

    complex_name  go to state 39
    class_parm    go to state 52


State 49

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 class_parm_list $@17 . ')' '{' $@18 class_body $@19 '}'

    ')'  shift, and go to state 53


State 50

   55 class_parm_list: class_parm_list . ',' class_parm
   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 '(' $@10 class_parm_list . $@11 ')' '{' $@12 class_body $@13 '}'

    ','  shift, and go to state 48

    $default  reduce using rule 67 ($@11)

    $@11  go to state 54


State 51

    7 complex_name: complex_name '.' SYMBOL .

    $default  reduce using rule 7 (complex_name)


State 52

   55 class_parm_list: class_parm_list ',' class_parm .

    $default  reduce using rule 55 (class_parm_list)


State 53

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 class_parm_list $@17 ')' . '{' $@18 class_body $@19 '}'

    '{'  shift, and go to state 55


State 54

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 '(' $@10 class_parm_list $@11 . ')' '{' $@12 class_body $@13 '}'

    ')'  shift, and go to state 56


State 55

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 class_parm_list $@17 ')' '{' . $@18 class_body $@19 '}'

    $default  reduce using rule 75 ($@18)

    $@18  go to state 57


State 56

   70 class_definition: CLASS $@7 data_attrs_list $@8 SYMBOL $@9 '(' $@10 class_parm_list $@11 ')' . '{' $@12 class_body $@13 '}'

    '{'  shift, and go to state 58


State 57

   77 class_definition: CLASS $@14 SYMBOL $@15 '(' $@16 class_parm_list $@17 ')' '{' $@18 . class_body $@19 '}'
